fixed z-index issue on annotation page

--- a/docs/css/docco.less
+++ b/docs/css/docco.less
@@ -66,6 +66,11 @@
     margin:0;
   }
 
+  .annotation {
+    position: relative;
+    z-index: 1;
+  }
+
   .annotation > * {
     position: relative;
     z-index: 2;
